# ai-commit-summarizer

./: .editorconfig  .env  .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
src/: __init__.py  cli.py  config.py  demo.py  diff_analyzer.py  main.py  message_generator.py
